Initial update of notebooks to new look-and-feel.

--- a/01.3_generator.ipynb
+++ b/01.3_generator.ipynb
@@ -4,11 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Practicum AI Logo image](images/practicum_ai_logo.png)\n",
+    "![Practicum AI Logo image](https://github.com/PracticumAI/practicumai.github.io/blob/main/images/logo/PracticumAI_logo_250x50.png?raw=true)\n",
     "***\n",
-    "This exercise adapted from Baig et al. (2020) <i>The Deep Learning Workshop</i> from <a href=\"https://www.packtpub.com/product/the-deep-learning-workshop/9781839219856\">Packt Publishers</a>.\n",
-    "\n",
-    "#### Exercise 7.02 (Student) - Page 328"
+    "This exercise adapted from Baig et al. (2020) <i>The Deep Learning Workshop</i> from <a href=\"https://www.packtpub.com/product/the-deep-learning-workshop/9781839219856\">Packt Publishers</a> (Exercise 7.02, page 328)."
    ]
   },
   {
