--- a/01.5_gan.ipynb
+++ b/01.5_gan.ipynb
@@ -4,18 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Practicum AI Logo image](images/practicum_ai_logo.png)\n",
+    "![Practicum AI Logo image](https://github.com/PracticumAI/practicumai.github.io/blob/main/images/logo/PracticumAI_logo_250x50.png?raw=true)\n",
     "***\n",
-    "This exercise adapted from Baig et al. (2020) <i>The Deep Learning Workshop</i> from <a href=\"https://www.packtpub.com/product/the-deep-learning-workshop/9781839219856\">Packt Publishers</a>.\n",
-    "\n",
-    "#### Exercise 7.04 Setup (Student) - Page 348"
+    "This exercise adapted from Baig et al. (2020) <i>The Deep Learning Workshop</i> from <a href=\"https://www.packtpub.com/product/the-deep-learning-workshop/9781839219856\">Packt Publishers</a> (Exercise 7.04, page 348)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"padding: 10px;margin-bottom: 20px;border: thin solid #6377B2;border-left-width: 25px;background-color: #fff\"><strong>Note:</strong> As this exercise builds on and extends exercise 7.03, these setup sections come from that earlier section. </div>\n"
+    "<div style=\"padding: 10px;margin-bottom: 20px;border: thin solid #30335D;border-left-width: 10px;background-color: #fff\"><strong>Note:</strong> As this exercise builds on and extends exercise 7.03, these setup sections come from that earlier section. </div>\n"
    ]
   },
   {
