--- a/01.1_gaussian_gan.ipynb
+++ b/01.1_gaussian_gan.ipynb
@@ -7,7 +7,7 @@
     "![Practicum AI Logo image](images/practicum_ai_logo.png)\n",
     "***\n",
     "\n",
-    "This exercise adapted from Andrew Glassner's book: *Deep Learning: A Visual Approach (Chapter 22)*.  Please see copyright notice at the end of this notebook."
+    "This exercise adapted from Andrew Glassner's book: *Deep Learning: A Visual Approach (Chapter 22)* from [No Starch Press](https://nostarch.com/deep-learning-visual-approach).  Please see copyright notice at the end of this notebook."
    ]
   },
   {
@@ -499,19 +499,7 @@
     "The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n",
     "\n",
     "THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.\n",
-    "</small>\n",
-    "\n",
-    "## Deep Learning: A Visual Approach\n",
-    "## by Andrew Glassner, https://glassner.com\n",
-    "### Order: https://nostarch.com/deep-learning-visual-approach\n",
-    "\n",
-    "### What's in this notebook\n",
-    "\n",
-    "This notebook is provided as a “behind-the-scenes” look at code used to make some of the figures in this chapter. It is cleaned up a bit from the original code that I hacked together, and is only lightly commented. I wrote the code to be easy to interpret and understand, even for those who are new to Python. I tried never to be clever or even more efficient at the cost of being harder to understand. The code is in Python3, using the versions of libraries as of April 2021. \n",
-    "\n",
-    "This notebook may contain additional code to create models and images not in the book. That material is included here to demonstrate additional techniques.\n",
-    "\n",
-    "Note that I've included the output cells in this saved notebook, but Jupyter doesn't save the variables or data that were used to generate them. To recreate any cell's output, evaluate all the cells from the start up to that cell. A convenient way to experiment is to first choose \"Restart & Run All\" from the Kernel menu, so that everything's been defined and is up to date. Then you can experiment using the variables, data, functions, and other stuff defined in this notebook."
+    "</small>"
    ]
   }
  ],
