Add descriptive headers for each step.

--- a/01.1_gaussian_gan.ipynb
+++ b/01.1_gaussian_gan.ipynb
@@ -4,17 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Practicum AI Logo image](images/practicum_ai_logo.png)\n",
+    "![Practicum AI Logo image](https://github.com/PracticumAI/practicumai.github.io/blob/main/images/logo/PracticumAI_logo_250x50.png?raw=true)\n",
     "***\n",
+    "# *Practicum AI:* GAN - Gaussian GAN\n",
     "\n",
     "This exercise adapted from Andrew Glassner's book: *Deep Learning: A Visual Approach (Chapter 22)* from [No Starch Press](https://nostarch.com/deep-learning-visual-approach).  Please see copyright notice at the end of this notebook."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Gaussian GAN"
    ]
   },
   {
