--- a/01.2_generate_data.ipynb
+++ b/01.2_generate_data.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "![Practicum AI Logo image](https://github.com/PracticumAI/practicumai.github.io/blob/main/images/logo/PracticumAI_logo_250x50.png?raw=true)\n",
     "***\n",
+    "# *Practicum AI:* GAN - Generate Data\n",
+    "\n",
     "This exercise adapted from Baig et al. (2020) <i>The Deep Learning Workshop</i> from <a href=\"https://www.packtpub.com/product/the-deep-learning-workshop/9781839219856\">Packt Publishers</a> (Exercise 7.01, page 321)."
    ]
   },
@@ -13,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(1)**</span>"
+    "#### 1. Importing the requisite libraries"
    ]
   },
   {
@@ -30,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(2)**</span>"
+    "#### 2. Generate a random number from a normal distribution"
    ]
   },
   {
@@ -63,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(3)**</span>"
+    "#### 3. Generate a sequence of numbers to the right of midpoint"
    ]
   },
   {
@@ -80,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(4)**</span>"
+    "#### 4. Generate a sequence of numbers to the left of midpoint"
    ]
   },
   {
@@ -97,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(5)**</span>"
+    "#### 5. Concatenate both sequences"
    ]
   },
   {
@@ -144,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(6)**</span>"
+    "#### 6. Generate the second feature as the sine() of the first"
    ]
   },
   {
@@ -161,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(7)**</span>"
+    "#### 7. Plot the distribution"
    ]
   },
   {
@@ -196,7 +198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(8)**</span>"
+    "#### 8. Reshape the features"
    ]
   },
   {
@@ -214,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(9)**</span>"
+    "#### 9. Concatenate both features to form a single DataFrame"
    ]
   },
   {
