--- a/01.3_generator.ipynb
+++ b/01.3_generator.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "![Practicum AI Logo image](https://github.com/PracticumAI/practicumai.github.io/blob/main/images/logo/PracticumAI_logo_250x50.png?raw=true)\n",
     "***\n",
+    "# *Practicum AI:* GAN - Generator\n",
+    "\n",
     "This exercise adapted from Baig et al. (2020) <i>The Deep Learning Workshop</i> from <a href=\"https://www.packtpub.com/product/the-deep-learning-workshop/9781839219856\">Packt Publishers</a> (Exercise 7.02, page 328)."
    ]
   },
@@ -13,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(1)**</span>"
+    "#### 1. Import the requisite libraries"
    ]
   },
   {
@@ -36,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(2)**</span>"
+    "#### 2. Define input and output features"
    ]
   },
   {
@@ -54,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(3)**</span>"
+    "#### 3. Generate a batch of random numbers"
    ]
   },
   {
@@ -72,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(4)**</span>"
+    "#### 4. Reshape the random data"
    ]
   },
   {
@@ -98,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(5)**</span>"
+    "#### 5. Define the generator network"
    ]
   },
   {
@@ -132,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(6)**</span>"
+    "#### 6. View a summary of the model"
    ]
   },
   {
@@ -176,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(7)**</span>"
+    "#### 7. Generate output from the generator network"
    ]
   },
   {
@@ -205,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(8)**</span>"
+    "#### 8. Plot the distribution"
    ]
   },
   {
