--- a/01.4_discriminator.ipynb
+++ b/01.4_discriminator.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "![Practicum AI Logo image](https://github.com/PracticumAI/practicumai.github.io/blob/main/images/logo/PracticumAI_logo_250x50.png?raw=true)\n",
     "***\n",
+    "# *Practicum AI:* GAN - Discriminator\n",
+    "\n",
     "This exercise adapted from Baig et al. (2020) <i>The Deep Learning Workshop</i> from <a href=\"https://www.packtpub.com/product/the-deep-learning-workshop/9781839219856\">Packt Publishers</a> (Exercise 7.03, page 338)."
    ]
   },
@@ -13,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(1)**</span>"
+    "#### 1. Import the requisite libraries"
    ]
   },
   {
@@ -37,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(2)**</span>"
+    "#### 2. Define a function to generate a real data distribution"
    ]
   },
   {
@@ -78,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(3)**</span>"
+    "#### 3. Define a function to generate inputs for the generator function"
    ]
   },
   {
@@ -103,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(4)**</span>"
+    "#### 4. Define a function to return a generator model"
    ]
   },
   {
@@ -131,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(5)**</span>"
+    "#### 5. Define a function to create fake samples using the generator model"
    ]
   },
   {
@@ -160,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(6)**</span>"
+    "#### 6. Define global parameters"
    ]
   },
   {
@@ -180,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(7)**</span>"
+    "#### 7. Define the discriminator model"
    ]
   },
   {
@@ -205,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(8)**</span>"
+    "#### 8. Print a summary of the discriminator model"
    ]
   },
   {
@@ -246,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(9)**</span>"
+    "#### 9. Instantiate the generator"
    ]
   },
   {
@@ -292,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(10)**</span>"
+    "#### 10. Define the number of epochs"
    ]
   },
   {
@@ -310,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:steelblue\">**(11)**</span>"
+    "#### 11. Train the discriminator network"
    ]
   },
   {
