Final edits for 12.01.22 workshop.

--- a/01.1_gaussian_gan.ipynb
+++ b/01.1_gaussian_gan.ipynb
@@ -297,6 +297,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"padding: 10px;margin-bottom: 20px;border:  thin solid #30335D; border-left-width: 10px;background-color: #fff\"><strong>Note:</strong> You can change the number_of_epochs variable in the block below. </div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -311,7 +318,7 @@
     "    columns = 4\n",
     "    plot_epochs = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 13]\n",
     "    plot_number = 0\n",
-    "    number_of_epochs = 2                                   # Originally 21\n",
+    "    number_of_epochs = 12                                   # Originally 21\n",
     "    \n",
     "    np.random.seed(random_seed)\n",
     "    real_data = get_real_data()\n",
