Edit Q. Malloy content.

--- a/01.2_generate_data.ipynb
+++ b/01.2_generate_data.ipynb
@@ -8,7 +8,13 @@
     "***\n",
     "# *Practicum AI:* GAN - Generate Data\n",
     "\n",
-    "This exercise adapted from Baig et al. (2020) <i>The Deep Learning Workshop</i> from <a href=\"https://www.packtpub.com/product/the-deep-learning-workshop/9781839219856\">Packt Publishers</a> (Exercise 7.01, page 321)."
+    "This exercise was adapted from Baig et al. (2020) <i>The Deep Learning Workshop</i> from <a href=\"https://www.packtpub.com/product/the-deep-learning-workshop/9781839219856\">Packt Publishers</a> (Exercise 7.01, page 321).\n",
+    "\n",
+    "In this exercise, we will generate a data distribution from a simple sine function. By completing this exercise, you will learn:\n",
+    "* How to generate a random number from a normal distribution.\n",
+    "* How to create a sequence of equally spaced data with the random number as its center.\n",
+    "\n",
+    "To finish this exercise, follow these steps:"
    ]
   },
   {
@@ -239,6 +245,15 @@
     "# Concatenate both features to form the real data set\n",
     "realData = np.concatenate((X1, X2), axis = 1)\n",
     "realData.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Summary\n",
+    "\n",
+    "In this exercise, we created a data distribution from a mathematical function. Later, we will use this data distribution to train a GAN to generate a distribution similar to this.  In the next notebook, we will create a basic generative network. "
    ]
   }
  ],
