--- a/01.3_generator.ipynb
+++ b/01.3_generator.ipynb
@@ -8,7 +8,15 @@
     "***\n",
     "# *Practicum AI:* GAN - Generator\n",
     "\n",
-    "This exercise adapted from Baig et al. (2020) <i>The Deep Learning Workshop</i> from <a href=\"https://www.packtpub.com/product/the-deep-learning-workshop/9781839219856\">Packt Publishers</a> (Exercise 7.02, page 328)."
+    "This exercise was adapted from Baig et al. (2020) <i>The Deep Learning Workshop</i> from <a href=\"https://www.packtpub.com/product/the-deep-learning-workshop/9781839219856\">Packt Publishers</a> (Exercise 7.02, page 328).\n",
+    "\n",
+    "In this exercise, we will build a generator network. The purpose of the generator is to create a fake data distribution from random noise.  We will do this in three steps:\n",
+    "\n",
+    "1. Generate random data points as input to the generator.\n",
+    "2. Build a six-layer network.\n",
+    "3. Test the network and plot the output distribution.\n",
+    "\n",
+    "To finish this exercise, follow these steps:"
    ]
   },
   {
@@ -56,6 +64,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We have ten features as input and two features as output. The ten input features are arbitrarily selected. The two output features, on the other hand, are selected because our real dataset contains two features."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 3. Generate a batch of random numbers"
    ]
   },
@@ -68,6 +83,13 @@
     "# Generate a batch of random numbers\n",
     "batch = 128\n",
     "genInput = randn(infeats * batch)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For this exercise, we set batch size to 128. Since the input feature size is 10, we will generate 128 * 10 random numbers."
    ]
   },
   {
@@ -134,6 +156,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In the first layer, the input dimensions is set to input features `infeats` which was assigned a value in step 2.  And in the last layer, the output dimensions is set to `outfeats` which was assigned a value in step 2."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 6. View a summary of the model"
    ]
   },
@@ -178,6 +207,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "A summary of the model allows us to see the output shapes of each layer. The first hidden layer, for example, has a shape of `(None, 32)`.  So, this layer has 32 neurons.  The `None` in each layer indicates the input batch size.  The number of total trainable parameters in the first layer is 352 and includes both weights and bias.  The weights matrix is 10 x 32 while the number of bias nodes is 1 x 32.  Thus, there are 352 (320 + 32) parameters in total.  This same calculation applies to all subsequent layers.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 7. Generate output from the generator network"
    ]
   },
@@ -201,6 +237,13 @@
     "# Generating fake samples from network.  The genInput parameter contains the random numbers generated earlier.\n",
     "fakeSamps = Genmodel.predict(genInput)\n",
     "fakeSamps.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The output from the generator function generates a sample with two features and 128 instances."
    ]
   },
   {
@@ -236,6 +279,17 @@
     "pyplot.xlabel('Feature 1 of the distribution')\n",
     "pyplot.ylabel('Feature 2 of the distribution')\n",
     "pyplot.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When plotted, the random data created by the generator looks pretty good.  Now we need to create a discriminator to evaluate the generator's output.  That's what we'll do in our next exercise.\n",
+    "\n",
+    "#### Summary\n",
+    "\n",
+    "In this exercise, we created a generator with six layers and then had it create a set of fake samples. But how did we make these network architecture decisions - the number of layers and activation functions?  Interestingly, these choices are usually the byproduct of experimentation, of trial-and-error."
    ]
   }
  ],
