--- a/01.4_discriminator.ipynb
+++ b/01.4_discriminator.ipynb
@@ -2,13 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "![Practicum AI Logo image](https://github.com/PracticumAI/practicumai.github.io/blob/main/images/logo/PracticumAI_logo_250x50.png?raw=true)\n",
     "***\n",
     "# *Practicum AI:* GAN - Discriminator\n",
     "\n",
-    "This exercise adapted from Baig et al. (2020) <i>The Deep Learning Workshop</i> from <a href=\"https://www.packtpub.com/product/the-deep-learning-workshop/9781839219856\">Packt Publishers</a> (Exercise 7.03, page 338)."
+    "This exercise was adapted from Baig et al. (2020) <i>The Deep Learning Workshop</i> from <a href=\"https://www.packtpub.com/product/the-deep-learning-workshop/9781839219856\">Packt Publishers</a> (Exercise 7.03, page 338).\n",
+    "\n",
+    "In this exercise, we will build the discriminator network and train the network on both real and fake samples.\n",
+    "\n",
+    "To finish this exercise, follow these steps:"
    ]
   },
   {
@@ -39,7 +45,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2. Define a function to generate a real data distribution"
+    "#### 2. Define a function to generate a real data distribution\n",
+    "\n",
+    "We first define a function to generate the features of our real data distribution. The return values of this function will be real data and labels."
    ]
   },
   {
@@ -80,7 +88,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3. Define a function to generate inputs for the generator function"
+    "#### 3. Define a function to generate inputs for the generator function\n",
+    "\n",
+    "Next, we define a function called `fakeInputs`.  In this function, we generate random numbers in the format we want (*(batch size, input features)*). This function returns fake data sampled from the random distribution, to be fed to the generator. "
    ]
   },
   {
@@ -105,7 +115,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4. Define a function to return a generator model"
+    "#### 4. Define a function to return a generator model\n",
+    "\n",
+    "This function creates and then returns the generator model."
    ]
   },
   {
@@ -133,7 +145,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5. Define a function to create fake samples using the generator model"
+    "#### 5. Define a function to create fake samples using the generator model\n",
+    "\n",
+    "Now we define a function to generate the features of our fake data distribution. We call the generator model defined in step 4, along with the generated input defined in step 3. This function then returns the fake dataset and associated labels."
    ]
   },
   {
@@ -201,6 +215,13 @@
     "\n",
     "# Compiling the model\n",
     "Discmodel.compile(loss='binary_crossentropy',optimizer='adam',metrics=['accuracy']) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The architecture of the discriminator model is similar to the generator. Note: the last layer's activation function is sigmoid.  That's because we want the model to predict the probability that the generator's output is real or fake."
    ]
   },
   {
@@ -360,6 +381,17 @@
     "        _, fakeAccuracy = Discmodel.evaluate(x_fake, y_fake, verbose = 0)\n",
     "        \n",
     "        print('Real accuracy:{R},Fake accuracy:{F}'.format(R = realAccuracy, F = fakeAccuracy))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we train the discriminator for 20,000 epochs on both the real and fake data. After training, we see that it achieves high accuracy levels.  Modify the number of training epochs to see if you can improve these numbers. \n",
+    "\n",
+    "#### Summary\n",
+    "\n",
+    "In this exercise, we created a set of helper functions before building the discriminator. We then trained the discriminator on real and fake data.  The results indicate that the discriminator is doing a good job of discriminating between real and fake data."
    ]
   }
  ],
