Added Q. Malloy content.

--- a/01.5_gan.ipynb
+++ b/01.5_gan.ipynb
@@ -8,7 +8,11 @@
     "***\n",
     "# *Practicum AI:* GAN - The Final Model\n",
     "\n",
-    "This exercise adapted from Baig et al. (2020) <i>The Deep Learning Workshop</i> from <a href=\"https://www.packtpub.com/product/the-deep-learning-workshop/9781839219856\">Packt Publishers</a> (Exercise 7.04, page 348)."
+    "This exercise was adapted from Baig et al. (2020) <i> The Deep Learning Workshop</i> from <a href=\"https://www.packtpub.com/product/the-deep-learning-workshop/9781839219856\">Packt Publishers</a> (Exercise 7.04, page 348).\n",
+    "\n",
+    "In this exercise, we will build and train the GAN using the method described in the previous section.\n",
+    "\n",
+    "To finish this exercise, follow these steps:"
    ]
   },
   {
@@ -46,7 +50,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2. Define a function to generate real samples"
+    "#### 2. Define a function to generate real samples\n",
+    "This function is equivalent to the one created in exercise **01.2_generate_data** that generates a data distribution."
    ]
   },
   {
@@ -87,7 +92,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3. Define a function to generate inputs for the generator network"
+    "#### 3. Define a function to generate inputs for the generator network\n",
+    "This function generates a fake dataset sampled from the random distribution."
    ]
   },
   {
@@ -112,7 +118,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4. Define a function to create the generator network"
+    "#### 4. Define a function to create the generator network\n",
+    "This function is the same as the one we built in exercise **01.3_generator** to create a generator network."
    ]
   },
   {
@@ -140,7 +147,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5. Define a function to create fake samples using the generator network"
+    "#### 5. Define a function to create fake samples using the generator network\n",
+    "This function takes the random data distribution as input and generates the fake distribution."
    ]
   },
   {
@@ -189,7 +197,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 7. Define a function to create the discriminator"
+    "#### 7. Define a function to create the discriminator\n",
+    "This function is the same as the one we built in exercise **01.4_discriminator** to create a discriminator network."
    ]
   },
   {
@@ -328,7 +337,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 11. Define a function to create the GAN model"
+    "The preceding plot shows that the data distribution is quite random. We can convert this random data into a form similar to the sine wave, which was our real data distribution. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 11. Define a function to create the GAN model\n",
+    "Function ganModel is just a wrapper for the generator and discriminator models defined earlier."
    ]
   },
   {
@@ -411,7 +428,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 15. Train the GAN network"
+    "#### 15. Train the GAN network\n",
+    "\n",
+    "The following are the steps in the GAN model training process:\n",
+    "* 1. Generate a random number and then generate a batch of real samples and their labels.\n",
+    "* 2. Generate a batch of fake samples and their labels.\n",
+    "* 3. Train the discriminator model using the `train_on_batch()` function using the batch of real samples and fake samples.\n",
+    "* 4. Generate another batch of fake samples to train the GAN model.\n",
+    "* 5. Generate the labels for the fake samples meant to fool the discriminator.\n",
+    "* 6. Train the GAN model using the `train_on_batch()` function using the new fake samples and their labels.\n",
+    "* 7. Repeat step 1 to 6 for the number of epochs we want the training to run for. This can be done through a for loop over the number of epochs.\n",
+    "* 8. At every intermediate step, we calculate the accuracy of the model on the fake samples and real samples using the `evaluate()` function. We also generate output plots at certain epochs."
    ]
   },
   {
@@ -487,11 +514,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Summary\n",
+    "\n",
+    "This exercise presented the entire process of building a GAN.  We learned what a GAN is, its components, and how they  work together to generate a plausible data distribution. You now have the knowledge to create GANs using your own data."
+   ]
   }
  ],
  "metadata": {
