--- a/01.4_discriminator.ipynb
+++ b/01.4_discriminator.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "#### 2. Define a function to generate a real data distribution\n",
     "\n",
-    "We first define a function to generate the features of our real data distribution. The return values of this function will be real data and labels."
+    "We first create a function to generate the features of our real data distribution. The return values of this function will be real data and labels."
    ]
   },
   {
@@ -90,7 +90,7 @@
    "source": [
     "#### 3. Define a function to generate inputs for the generator function\n",
     "\n",
-    "Next, we define a function called `fakeInputs`.  In this function, we generate random numbers in the format we want (*(batch size, input features)*). This function returns fake data sampled from the random distribution, to be fed to the generator. "
+    "Next, we create a function called `fakeInputs`.  In this function, we generate random numbers in the format we want (*(batch size, input features)*). This function returns fake data sampled from the random distribution, to be fed to the generator. "
    ]
   },
   {
@@ -117,7 +117,7 @@
    "source": [
     "#### 4. Define a function to return a generator model\n",
     "\n",
-    "This function creates and then returns the generator model."
+    "This function defines and then returns the generator model."
    ]
   },
   {
@@ -147,7 +147,7 @@
    "source": [
     "#### 5. Define a function to create fake samples using the generator model\n",
     "\n",
-    "Now we define a function to generate the features of our fake data distribution. We call the generator model defined in step 4, along with the generated input defined in step 3. This function then returns the fake dataset and associated labels."
+    "Now we create a function to generate the features of our fake data distribution. We call the generator model defined in step 4, along with the generated input defined in step 3. This function then returns the fake dataset and associated labels."
    ]
   },
   {
